@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
         <jakartaee.version>10.0.0</jakartaee.version>
-        <jandex.version>3.1.5</jandex.version>
+        <jandex.version>3.1.6</jandex.version>
     </properties>
 
     <dependencies>
@@ -28,16 +28,11 @@
             <version>1.18.30</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.flowlogix</groupId>-->
-<!--            <artifactId>weld-repackaged</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--            <classifier>native</classifier>-->
-<!--        </dependency>-->
         <dependency>
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-core</artifactId>
-            <version>5.1.2.Final</version>
+            <groupId>com.flowlogix</groupId>
+            <artifactId>weld-repackaged</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <classifier>native</classifier>
         </dependency>
         <dependency>
             <groupId>io.smallrye</groupId>
@@ -59,7 +54,7 @@
             <plugin>
                 <groupId>io.smallrye</groupId>
                 <artifactId>jandex-maven-plugin</artifactId>
-                <version>3.1.5</version>
+                <version>3.1.6</version>
                 <executions>
                     <execution>
                         <id>make-index</id>
@@ -87,55 +82,21 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.flowlogix.example.HelloEntryPoint</mainClass>
-                    <arguments>
-                        <argument>Anya!</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>3.1.1</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 
     <profiles>
         <profile>
             <id>native</id>
+            <dependencies>
+                <dependency>
+                    <groupId>io.helidon.integrations.graal</groupId>
+                    <artifactId>helidon-mp-graal-native-image-extension</artifactId>
+                    <version>4.0.1</version>
+                </dependency>
+            </dependencies>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>java-agent</id>
-                                <goals>
-                                    <goal>exec</goal>
-                                </goals>
-                                <configuration>
-                                    <executable>java</executable>
-                                    <workingDirectory>${project.build.directory}</workingDirectory>
-                                    <arguments>
-                                        <argument>--enable-preview</argument>
-                                        <argument>-classpath</argument>
-                                        <classpath/>
-                                        <argument>com.flowlogix.example.HelloEntryPoint</argument>
-                                    </arguments>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
                     <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
@@ -145,16 +106,28 @@
                             <buildArgs>
                                 <arg>--enable-preview</arg>
                                 <arg>--initialize-at-build-time=com.flowlogix.example</arg>
+                                <arg>--initialize-at-build-time=com.flowlogix.weld</arg>
+                                <arg>-H:+UnlockExperimentalVMOptions</arg>
                                 <arg>-H:+DashboardAll</arg>
+                                <arg>-H:DashboardDump=${project.build.directory}/${project.build.finalName}</arg>
+                                <arg>-march=native</arg>
                             </buildArgs>
-                            <agent>
-                                <enabled>true</enabled>
-                                <options>
-                                    <enableExperimentalPredefinedClasses>true</enableExperimentalPredefinedClasses>
-                                </options>
-                            </agent>
+                            <metadataRepository>
+                                <enabled>false</enabled>
+                            </metadataRepository>
                         </configuration>
                         <executions>
+                            <execution>
+                                <id>resource-config</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>generateResourceConfig</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- generate records for all module's resources -->
+                                    <isDetectionEnabled>true</isDetectionEnabled>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <goals>
                                     <goal>compile-no-fork</goal>
